[gd_scene load_steps=23 format=3 uid="uid://bvn4ssrvphh28"]

[ext_resource type="Texture2D" uid="uid://tql14gtq05lf" path="res://Textures/UI/Information/invalid.png" id="1_mp3ie"]
[ext_resource type="Material" uid="uid://b863l3lxgsu55" path="res://Resources/Shaders/palette_swap_material.tres" id="1_vwd38"]
[ext_resource type="Script" path="res://Scenes and Scripts/UI/ProblemSelection/solution_creation_info.gd" id="2_6e24i"]
[ext_resource type="PackedScene" uid="uid://c4lyyfxwvqyfk" path="res://Scenes and Scripts/UI/Buttons/panelButton.tscn" id="2_66fjv"]
[ext_resource type="FontFile" uid="uid://cq27s0444iwkg" path="res://Textures/Fonts/ConnectionIi-2wj8.otf" id="3_ghv2s"]
[ext_resource type="Shader" path="res://Resources/Shaders/palette_swap.gdshader" id="3_ktptg"]
[ext_resource type="Texture2D" uid="uid://c3nrennubqoow" path="res://Textures/Buttons/icons/back.png" id="4_187qd"]
[ext_resource type="PackedScene" uid="uid://dorw3vr2amuy3" path="res://Scenes and Scripts/Components/button_sound_component.tscn" id="4_j2ks7"]
[ext_resource type="PackedScene" uid="uid://c338whou4al23" path="res://Scenes and Scripts/UI/Tooltip.tscn" id="5_8fnwf"]
[ext_resource type="FontFile" uid="uid://dtkr82iuj8ovy" path="res://Textures/Fonts/munro-font/Munro-2LYe.ttf" id="5_odh5n"]
[ext_resource type="Texture2D" uid="uid://bcu6ptkd3fwfe" path="res://Textures/Buttons/icons/submit.png" id="6_eyill"]
[ext_resource type="Texture2D" uid="uid://c8iesbop3uqwa" path="res://Textures/Buttons/up_down.png" id="6_lmoy8"]
[ext_resource type="Script" path="res://Scenes and Scripts/Classes/spin_box.gd" id="7_aqn1d"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_1f1ao"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ox6n2"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_blyae"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_lvqyk"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_t7fmk"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_2ys1n"]

[sub_resource type="Theme" id="Theme_qjfhe"]
default_font = ExtResource("5_odh5n")
default_font_size = 10

[sub_resource type="ShaderMaterial" id="ShaderMaterial_214qr"]
resource_local_to_scene = true
shader = ExtResource("3_ktptg")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_j1p5a"]
resource_local_to_scene = true
shader = ExtResource("3_ktptg")

[node name="SolutionCreationInfo" type="PanelContainer" node_paths=PackedStringArray("prev_button", "exit_button")]
material = ExtResource("1_vwd38")
use_parent_material = true
custom_minimum_size = Vector2(2.08165e-12, 150)
offset_right = 121.0
offset_bottom = 200.0
script = ExtResource("2_6e24i")
title = "3. Solution Creation"
prev_button = NodePath("VBoxContainer/Buttons/PrevStep")
exit_button = NodePath("VBoxContainer/Buttons/Submit")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
use_parent_material = true
layout_mode = 2
alignment = 2

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer"]
use_parent_material = true
layout_mode = 2
size_flags_vertical = 3

[node name="Body" type="Label" parent="VBoxContainer/VBoxContainer"]
use_parent_material = true
layout_mode = 2
theme_override_font_sizes/font_size = 9
text = "- Draw solutions to the problem.
- Submit solutions using puzzle tab."
autowrap_mode = 3

[node name="PanelContainer2" type="PanelContainer" parent="VBoxContainer/VBoxContainer"]
use_parent_material = true
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/VBoxContainer/PanelContainer2"]
use_parent_material = true
layout_mode = 2

[node name="CustomSolutions" type="CheckButton" parent="VBoxContainer/VBoxContainer/PanelContainer2/VBoxContainer"]
use_parent_material = true
layout_mode = 2
theme_override_fonts/font = ExtResource("3_ghv2s")
theme_override_font_sizes/font_size = 8
theme_override_styles/normal = SubResource("StyleBoxEmpty_1f1ao")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_ox6n2")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_blyae")
theme_override_styles/hover = SubResource("StyleBoxEmpty_lvqyk")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_t7fmk")
theme_override_styles/focus = SubResource("StyleBoxEmpty_2ys1n")
text = "Custom solutions"

[node name="ButtonSoundComponent" parent="VBoxContainer/VBoxContainer/PanelContainer2/VBoxContainer/CustomSolutions" instance=ExtResource("4_j2ks7")]

[node name="AllowOtherSolutions" type="CheckButton" parent="VBoxContainer/VBoxContainer/PanelContainer2/VBoxContainer"]
visible = false
use_parent_material = true
layout_mode = 2
theme_override_fonts/font = ExtResource("3_ghv2s")
theme_override_font_sizes/font_size = 8
theme_override_styles/normal = SubResource("StyleBoxEmpty_1f1ao")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_ox6n2")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_blyae")
theme_override_styles/hover = SubResource("StyleBoxEmpty_lvqyk")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_t7fmk")
theme_override_styles/focus = SubResource("StyleBoxEmpty_2ys1n")
text = "Allow other
solutions"

[node name="ButtonSoundComponent" parent="VBoxContainer/VBoxContainer/PanelContainer2/VBoxContainer/AllowOtherSolutions" instance=ExtResource("4_j2ks7")]

[node name="NoSolutions" type="HBoxContainer" parent="VBoxContainer/VBoxContainer"]
visible = false
use_parent_material = true
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/VBoxContainer/NoSolutions"]
layout_mode = 2
texture = ExtResource("1_mp3ie")
stretch_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/VBoxContainer/NoSolutions"]
use_parent_material = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
theme_override_font_sizes/font_size = 9
text = "No solutions created"
autowrap_mode = 2

[node name="PanelContainer" type="PanelContainer" parent="VBoxContainer/VBoxContainer"]
use_parent_material = true
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/VBoxContainer/PanelContainer"]
use_parent_material = true
layout_mode = 2

[node name="CustomSolutionCount" type="CheckButton" parent="VBoxContainer/VBoxContainer/PanelContainer/VBoxContainer"]
use_parent_material = true
layout_mode = 2
theme_override_fonts/font = ExtResource("3_ghv2s")
theme_override_font_sizes/font_size = 8
theme_override_styles/normal = SubResource("StyleBoxEmpty_1f1ao")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_ox6n2")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_blyae")
theme_override_styles/hover = SubResource("StyleBoxEmpty_lvqyk")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_t7fmk")
theme_override_styles/focus = SubResource("StyleBoxEmpty_2ys1n")
text = "Custom required
solution count"

[node name="ButtonSoundComponent" parent="VBoxContainer/VBoxContainer/PanelContainer/VBoxContainer/CustomSolutionCount" instance=ExtResource("4_j2ks7")]

[node name="SolutionCountContainer" type="HBoxContainer" parent="VBoxContainer/VBoxContainer/PanelContainer/VBoxContainer"]
visible = false
use_parent_material = true
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/VBoxContainer/PanelContainer/VBoxContainer/SolutionCountContainer"]
use_parent_material = true
layout_mode = 2
text = "Required
solution count:"
vertical_alignment = 1

[node name="SolutionCountContainer" type="HBoxContainer" parent="VBoxContainer/VBoxContainer/PanelContainer/VBoxContainer/SolutionCountContainer"]
use_parent_material = true
layout_mode = 2
theme_override_constants/separation = 1

[node name="SolutionCount" type="SpinBox" parent="VBoxContainer/VBoxContainer/PanelContainer/VBoxContainer/SolutionCountContainer/SolutionCountContainer"]
use_parent_material = true
layout_mode = 2
theme = SubResource("Theme_qjfhe")
theme_override_icons/updown = ExtResource("6_lmoy8")
min_value = 1.0
max_value = 4.0
value = 1.0
alignment = 1
update_on_text_changed = true
script = ExtResource("7_aqn1d")

[node name="Buttons" type="HBoxContainer" parent="VBoxContainer"]
use_parent_material = true
layout_mode = 2
alignment = 1

[node name="PrevStep" parent="VBoxContainer/Buttons" instance=ExtResource("2_66fjv")]
material = SubResource("ShaderMaterial_214qr")
layout_mode = 2
icon = ExtResource("4_187qd")
minimum_size = Vector2(24, 21)
icon_use_parent_material = true

[node name="Tooltip" parent="VBoxContainer/Buttons/PrevStep" instance=ExtResource("5_8fnwf")]
tooltip = "Previous Step"

[node name="Submit" parent="VBoxContainer/Buttons" instance=ExtResource("2_66fjv")]
material = SubResource("ShaderMaterial_j1p5a")
layout_mode = 2
icon = ExtResource("6_eyill")
minimum_size = Vector2(22, 22)
icon_use_parent_material = true

[node name="Tooltip" parent="VBoxContainer/Buttons/Submit" instance=ExtResource("5_8fnwf")]
tooltip = "Submit Problem"

[connection signal="toggled" from="VBoxContainer/VBoxContainer/PanelContainer2/VBoxContainer/CustomSolutions" to="." method="_on_custom_solutions_toggled"]
[connection signal="toggled" from="VBoxContainer/VBoxContainer/PanelContainer2/VBoxContainer/AllowOtherSolutions" to="." method="_on_custom_solutions_toggled"]
[connection signal="toggled" from="VBoxContainer/VBoxContainer/PanelContainer/VBoxContainer/CustomSolutionCount" to="." method="_on_check_button_toggled"]
